# tree-sitter-tcss

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  a.tcss  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tcss.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tcss/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTcss/: tcss.h
bindings/swift/TreeSitterTcssTests/: TreeSitterTcssTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: everything.txt  missing_colon.txt  simple.txt
test/corpus/error/: missing_colon.txt  mutliple_selectors.txt
test/corpus/ok/: classes.txt  comments.txt  id.txt  psuedo_selector.txt  simple.txt  type_selector.txt  variables.txt  wildcard.txt
test/corpus/test/corpus/: 01_simple_rule.txt  02_multiple_properties.txt  03_numeric_values.txt  04_hex_colors.txt  05_multiple_values.txt  06_variables.txt  07_class_selectors.txt  08_id_selector.txt  09_pseudo_classes.txt  10_wildcard_selector.txt  11_combinator.txt  12_nesting_selector.txt  13_multiple_selectors.txt  14_comments.txt  15_rgb_functions.txt  16_hsl_functions.txt  17_ansi_colors.txt  18_property_keywords.txt  19_important.txt  20_complex_combination.txt
