[package]
name = "tree-sitter-tcss"
description = "Tree sitter grammar for textual's tcss"
version = "0.1.0"
authors = ["Murli Tawari <kraanzu@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tcss"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/kraanzu/tree-sitter-tcss"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
